package eus.ehu.cinemaproject.domain;

public enum Food {
    SMALL_POPCORN,
    MEDIUM_POPCORN,
    LARGE_POPCORN,
    SMALL_SODA,
    MEDIUM_SODA,
    LARGE_SODA,
    NACHOS,
    CANDY;
}
