package eus.ehu.cinemaproject.domain;

public enum OrderStatus {
    RESERVED,
    COMPLETED,
    CANCELLED;
}
