package eus.ehu.cinemaproject.domain;

import java.util.Date;

public class ShowTime {
    private Date screeningTime;
    private Film film;

}
