package eus.ehu.cinemaproject.domain.users;

public class User {
        private String id;
        private String name;
        private String email;
}
