
@startuml
class User{
  -id: int
  -email: String
  -password: String
  -name: String
  -surname: String

}

class Customer{
  -points: int
  -totalBalance: double
}

class Worker{
    -salary: double
}

class Admin{
}

class Cinema{
    -name: String
    -address: String
    -phoneNumber: int
}

class PurchaseReceipt{
  -orderDate: Date
  -totalAmount: double
}

class FoodOrder{
  -pricePerUnit: double
}

class ScreeningRoom{
  -roomNumber: int
  -openingTime: Date
  -closingTime: Date
}

class ShowTime{
  -screeningTime: Date
}

class Film{
  -title: String
  -director: String
  -duration: int
  -description: String
}

class Review{
  -reviewId: int
  -opinion: String
  -rating: int
}

class Seat{
  -row: int
  -seatNum: int
  -price: double
}

class Quantity{
  -quantity: int
}

enum Genre{
  Action
  Adventure
  Animated
  Comedy
  Drama
  Fantasy
  Historical
  Horror
  Musical
  Romance
  Science Fiction
  Thriller
  Western
}

enum OrderStatus{
  Reserved
  Completed
  Cancelled
}

enum Food{
  SmallPopCorn
  MediumPopCorn
  LargePopCorn
  SmallSoda
  MediumSoda
  LargeSoda
  Nachos
  Candy
}

enum SeatType{
  Normal
  Comfortable
  Premium
}

User <|-- Customer: is a
User <|-- Worker: is a
Worker<|-- Admin: is a

Customer "1" -- "*" PurchaseReceipt: has >
Cinema "1" -- "*" ScreeningRoom: has >
Cinema "1" -- "1" Cinema: singleton
Cinema "1" -- "1" Admin: has
Cinema "1" -- "*" Worker: has >

ScreeningRoom "*" -- "*" ShowTime: has >
ShowTime "1" -- "*" Seat: has >

Seat "*" -- "1" SeatType: of >
ShowTime "*" -- "1" Film: shows >
Film "1" -- "*" Review: has >
Film "*" -- "*" Genre : categorized by >

PurchaseReceipt "1" -- "*" Seat: has >
PurchaseReceipt "*" -- "1" Film: associated with >
PurchaseReceipt "*" -- "1" OrderStatus : has >
PurchaseReceipt "*" -- "*" FoodOrder: has >

FoodOrder "*" -- "1" Food: has >
(PurchaseReceipt, FoodOrder) .. Quantity
@enduml
